--- a/app/src/main/res/layout/fragment_reject.xml
+++ b/app/src/main/res/layout/fragment_reject.xml
@@ -1,13 +1,26 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.sonikpalms.intern.com.sonikpalms.threefragments.FragmentReject">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <Button
+        android:id="@+id/buttonReject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/textViewReject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="User declined the
+        address"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@+id/buttonReject"
+        android:textSize="17sp"/>
+
+</RelativeLayout>
