--- a/app/src/main/res/layout/fragment_reject.xml
+++ b/app/src/main/res/layout/fragment_reject.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +11,8 @@
         android:layout_height="wrap_content"
         android:text="OK"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textViewReject"
@@ -18,9 +20,17 @@
         android:layout_height="wrap_content"
         android:text="User declined the
         address"
+        android:textSize="21sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_alignBottom="@+id/buttonReject"
-        android:textSize="17sp"/>
+        android:layout_alignBottom="@+id/buttonReject" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/reject4" />
 
 </RelativeLayout>
