--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,39 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/main"
-    tools:context="com.sonikpalms.intern.MainActivity">
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-    <Button
-        android:id="@+id/clearButton"
-        android:layout_width="wrap_content"
+
+    <fragment
+        android:name="com.sonikpalms.intern.com.sonikpalms.threefragments.FragmentButton"
+        android:id="@+id/fragment_button"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/sendButton"
-        android:layout_alignBottom="@+id/sendButton"
-        android:layout_alignEnd="@+id/editText"
-        android:text="Clear" />
+        android:layout_width="match_parent"
+        tools:layout="@layout/fragment_button"/>
 
-    <Button
-        android:id="@+id/sendButton"
-        android:layout_width="wrap_content"
+    <fragment
+        android:name="com.sonikpalms.intern.com.sonikpalms.threefragments.FragmentAccept"
+        android:id="@+id/fragment_accept"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText"
-        android:layout_below="@+id/editText"
-        android:layout_marginTop="35dp"
-        android:text="Send" />
+        android:layout_width="match_parent"
+        tools:layout="@layout/fragment_accept"/>
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <fragment
+        android:name="com.sonikpalms.intern.com.sonikpalms.threefragments.FragmentReject"
+        android:id="@+id/fragment_reject"
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        tools:layout="@layout/fragment_reject"/>
 
-</RelativeLayout>
+
+
+
+</LinearLayout>
