--- a/app/src/main/res/layout/fragment_button.xml
+++ b/app/src/main/res/layout/fragment_button.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.sonikpalms.intern.com.sonikpalms.threefragments.FragmentButton">
 
+
     <Button
         android:id="@+id/clearButton"
         android:layout_width="wrap_content"
@@ -11,7 +12,7 @@
         android:layout_alignBaseline="@+id/sendButton"
         android:layout_alignBottom="@+id/sendButton"
         android:layout_alignEnd="@+id/editText"
-        android:text="Clear" />
+        android:text="@string/clear" />
 
     <Button
         android:id="@+id/sendButton"
@@ -20,7 +21,7 @@
         android:layout_alignStart="@+id/editText"
         android:layout_below="@+id/editText"
         android:layout_marginTop="35dp"
-        android:text="Send" />
+        android:text="@string/send" />
 
     <EditText
         android:id="@+id/editText"
@@ -29,6 +30,6 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
+        android:layout_centerHorizontal="true"
+        tools:ignore="LabelFor" />
 </RelativeLayout>
