--- a/app/src/main/res/layout/fragment_accept.xml
+++ b/app/src/main/res/layout/fragment_accept.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sonikpalms.intern.com.sonikpalms.threefragments.FragmentAccept">
+    tools:context="com.sonikpalms.intern.com.sonikpalms.fragment.FragmentAccept">
 
-    <!-- TODO: Update blank fragment layout -->
+
 
     <Button
         android:id="@+id/buttonAccept"
