--- a/app/src/main/res/layout/fragment_button.xml
+++ b/app/src/main/res/layout/fragment_button.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sonikpalms.intern.com.sonikpalms.threefragments.FragmentButton">
+    tools:context="com.sonikpalms.intern.com.sonikpalms.fragment.FragmentButton">
 
 
     <Button
@@ -32,4 +32,5 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         tools:ignore="LabelFor" />
+
 </RelativeLayout>
