--- a/app/src/main/res/layout/fragment_reject.xml
+++ b/app/src/main/res/layout/fragment_reject.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sonikpalms.intern.com.sonikpalms.threefragments.FragmentReject">
+    tools:context="com.sonikpalms.intern.com.sonikpalms.fragment.FragmentReject">
 
     <Button
         android:id="@+id/buttonReject"
