--- a/app/src/main/res/layout/fragment_button.xml
+++ b/app/src/main/res/layout/fragment_button.xml
@@ -5,32 +5,10 @@
     tools:context="com.sonikpalms.intern.com.sonikpalms.fragment.FragmentButton">
 
 
-    <Button
-        android:id="@+id/clearButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/sendButton"
-        android:layout_alignBottom="@+id/sendButton"
-        android:layout_alignEnd="@+id/editText"
-        android:text="@string/clear" />
-
-    <Button
-        android:id="@+id/sendButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText"
-        android:layout_below="@+id/editText"
-        android:layout_marginTop="35dp"
-        android:text="@string/send" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        tools:ignore="LabelFor" />
-
+    <ListView
+        android:id="@+id/list_item"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
