--- a/app/src/main/res/layout/content_receiver.xml
+++ b/app/src/main/res/layout/content_receiver.xml
@@ -13,25 +13,59 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reject"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="29dp"
-        android:layout_below="@+id/static_text"
-        android:layout_toEndOf="@+id/static_text" />
+        tools:ignore="HardcodedText"
+        android:layout_alignBaseline="@+id/accept_button"
+        android:layout_alignBottom="@+id/accept_button"
+        android:layout_toEndOf="@+id/email_item" />
 
     <Button
         android:id="@+id/accept_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accept"
-        android:layout_marginEnd="10dp"
-        android:layout_alignBaseline="@+id/reject_button"
-        android:layout_alignBottom="@+id/reject_button"
-        android:layout_toStartOf="@+id/static_text" />
+        android:text="Send"
+        tools:ignore="HardcodedText"
+        android:layout_marginTop="33dp"
+        android:layout_below="@+id/email_item"
+        android:layout_toStartOf="@+id/email_item" />
 
     <TextView
-        android:id="@+id/static_text"
+        android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:text="TextView"
+        android:textSize="24dp"
+        tools:ignore="HardcodedText,SpUsage"
+        android:layout_alignBottom="@+id/isOnline"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/category_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="петух"
+        tools:ignore="HardcodedText"
+        android:layout_marginTop="13dp"
+        android:layout_below="@+id/isOnline"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/email_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:ignore="HardcodedText"
+        android:layout_marginTop="14dp"
+        android:layout_below="@+id/category_item"
+        android:layout_centerHorizontal="true" />
+
+    <RadioButton
+        android:id="@+id/isOnline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:layout_marginTop="16dp"
+        tools:ignore="HardcodedText"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/accept_button"
+        android:layout_marginStart="15dp" />
 </RelativeLayout>
