--- a/app/src/main/res/layout/fragment_button.xml
+++ b/app/src/main/res/layout/fragment_button.xml
@@ -1,14 +1,17 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sonikpalms.intern.com.sonikpalms.fragment.FragmentButton">
+    tools:context="com.sonikpalms.intern.com.sonikpalms.fragment.FragmentButton"
+    android:weightSum="1">
 
 
-    <ListView
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list_item"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-</LinearLayout>
+        android:layout_width="match_parent" />
+
+
+
+</RelativeLayout>
