--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,12 +7,12 @@
     android:orientation="horizontal">
 
     <FrameLayout
-    android:id="@+id/fragment_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="50dp"
-    android:layout_weight="1">
-    </FrameLayout>
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="30dp"></FrameLayout>
 
-    </LinearLayout>
+</LinearLayout>
 
