--- a/app/src/main/res/layout/list_one_item.xml
+++ b/app/src/main/res/layout/list_one_item.xml
@@ -14,14 +14,15 @@
         android:layout_height="wrap_content"
         android:clickable="false"
         android:focusable="false"
+        android:focusableInTouchMode="false"
         android:text="" />
 
     <TextView
         android:id="@+id/userName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Имя"
-        android:clickable="true"
+        android:text=""
+
         android:layout_toEndOf="@+id/isOnline"
         tools:ignore="HardcodedText,ObsoleteLayoutParam" />
 
