--- a/app/src/main/res/layout/list_one_item.xml
+++ b/app/src/main/res/layout/list_one_item.xml
@@ -11,55 +11,56 @@
 
     <ImageView
         android:id="@+id/imageViewUrlToImage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.52"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_weight="1"
         app:srcCompat="@android:drawable/presence_invisible"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription,InefficientWeight,Suspicious0dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:ignore="HardcodedText" />
 
-        <TextView
-            android:id="@+id/textViewPublishedAt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textViewUrl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textViewDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/main_block"
         android:layout_width="117dp"
         android:layout_height="31dp"
         android:layout_below="@+id/isOnline"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         tools:ignore="ObsoleteLayoutParam">
 
         <TextView
-            android:id="@+id/textViewTitle"
+            android:id="@+id/textViewPublishedAt"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="TextView"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/textViewUrl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/textViewDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            tools:ignore="HardcodedText" />
+
 
         <TextView
             android:id="@+id/textViewAuthor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 
 </LinearLayout>
