--- a/app/src/main/res/layout/list_one_item.xml
+++ b/app/src/main/res/layout/list_one_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
@@ -35,7 +35,7 @@
 
         <TextView
             android:id="@+id/textViewPublishedAt"
-            android:layout_width="match_parent"
+            android:layout_width="390dp"
             android:layout_height="50dp"
             android:text="TextView"
             tools:ignore="HardcodedText" />
