--- a/app/src/main/res/layout/fragment_button.xml
+++ b/app/src/main/res/layout/fragment_button.xml
@@ -11,6 +11,13 @@
         android:id="@+id/list_item"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
+        android:src="@android:drawable/stat_sys_download"/>
 
 
 
