--- a/app/src/main/res/layout/content_receiver.xml
+++ b/app/src/main/res/layout/content_receiver.xml
@@ -8,6 +8,16 @@
     tools:context="com.sonikpalms.intern.Receiver"
     tools:showIn="@layout/activity_receiver">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+
+        android:id="@+id/srl_reload"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
+
     <Button
         android:id="@+id/reject_button"
         android:layout_width="wrap_content"
@@ -34,6 +44,9 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/reject_button"
         android:layout_alignParentStart="true" />
+
+
+
 
 
 </RelativeLayout>
